@@ -413,3 +413,16 @@ Info: tar produced an error while unpacking this source package.  This
  probably means there's something broken or at least strange about the way
  the upstream tar file was constructed.  You may want to report this as an
  upstream bug.
+
+Tag: control-file-with-CRLF-EOLs
+Severity: important
+Certainty: possible
+Info: The given control file uses <tt>CRLF</tt> as line terminator
+ instead of the traditional UNIX <tt>LF</tt> terminator.  Since some
+ tools were only designed with the UNIX end-of-line terminators in mind,
+ it is possible that they misbehave or lead to unexpected results.
+ .
+ Running the following command against the given file removes any
+ <tt>CR</tt> character in the file:
+ .
+ <tt>sed -i 's/\r//g' path/to/file</tt>
