@@ -1,0 +1,8 @@
+{$srcpkg} ({$version}) unstable; urgency=low
+
+  * Lintian Test Suite.
+  * Test: {$testname}
+
+  * Suppress "should close ITP bug" messages.  (Closes: #123456)
+
+ -- {$author}  {$date}
